Shulga-FamilyTree-sort